# serializer version: 1
# name: test_transform_coverage_to_coordinates[coverage0]
  list([
    tuple(
      0,
      0,
    ),
    tuple(
      1,
      0,
    ),
    tuple(
      2,
      1,
    ),
    tuple(
      3,
      1,
    ),
    tuple(
      4,
      2,
    ),
    tuple(
      5,
      3,
    ),
    tuple(
      7,
      3,
    ),
    tuple(
      8,
      4,
    ),
    tuple(
      9,
      4,
    ),
    tuple(
      10,
      3,
    ),
    tuple(
      11,
      2,
    ),
  ])
# ---
# name: test_transform_coverage_to_coordinates[coverage1]
  list([
    tuple(
      0,
      0,
    ),
    tuple(
      1,
      0,
    ),
    tuple(
      2,
      1,
    ),
    tuple(
      3,
      1,
    ),
    tuple(
      4,
      2,
    ),
    tuple(
      5,
      3,
    ),
    tuple(
      7,
      3,
    ),
    tuple(
      8,
      4,
    ),
    tuple(
      9,
      4,
    ),
    tuple(
      10,
      3,
    ),
    tuple(
      11,
      2,
    ),
    tuple(
      12,
      1,
    ),
    tuple(
      13,
      1,
    ),
  ])
# ---
# name: test_transform_coverage_to_coordinates[coverage2]
  list([
    tuple(
      0,
      0,
    ),
    tuple(
      2,
      0,
    ),
    tuple(
      3,
      1,
    ),
    tuple(
      5,
      1,
    ),
    tuple(
      6,
      0,
    ),
    tuple(
      7,
      0,
    ),
    tuple(
      8,
      1,
    ),
    tuple(
      10,
      1,
    ),
    tuple(
      11,
      2,
    ),
    tuple(
      15,
      2,
    ),
    tuple(
      16,
      3,
    ),
    tuple(
      18,
      3,
    ),
    tuple(
      19,
      2,
    ),
    tuple(
      21,
      2,
    ),
    tuple(
      22,
      5,
    ),
    tuple(
      23,
      5,
    ),
    tuple(
      24,
      4,
    ),
    tuple(
      25,
      4,
    ),
    tuple(
      26,
      3,
    ),
    tuple(
      27,
      3,
    ),
    tuple(
      28,
      2,
    ),
    tuple(
      29,
      2,
    ),
    tuple(
      30,
      1,
    ),
    tuple(
      31,
      1,
    ),
    tuple(
      32,
      5,
    ),
    tuple(
      34,
      5,
    ),
    tuple(
      35,
      6,
    ),
    tuple(
      37,
      6,
    ),
    tuple(
      38,
      7,
    ),
    tuple(
      39,
      8,
    ),
    tuple(
      40,
      7,
    ),
    tuple(
      41,
      6,
    ),
    tuple(
      42,
      5,
    ),
    tuple(
      45,
      5,
    ),
    tuple(
      46,
      4,
    ),
    tuple(
      47,
      3,
    ),
    tuple(
      48,
      2,
    ),
    tuple(
      49,
      6,
    ),
    tuple(
      50,
      7,
    ),
    tuple(
      51,
      9,
    ),
    tuple(
      52,
      0,
    ),
    tuple(
      56,
      0,
    ),
    tuple(
      57,
      1,
    ),
    tuple(
      58,
      1,
    ),
    tuple(
      59,
      2,
    ),
    tuple(
      60,
      2,
    ),
    tuple(
      61,
      3,
    ),
    tuple(
      62,
      3,
    ),
    tuple(
      63,
      4,
    ),
    tuple(
      64,
      4,
    ),
    tuple(
      65,
      5,
    ),
    tuple(
      67,
      5,
    ),
    tuple(
      68,
      6,
    ),
    tuple(
      70,
      6,
    ),
    tuple(
      71,
      7,
    ),
    tuple(
      72,
      7,
    ),
    tuple(
      73,
      8,
    ),
    tuple(
      74,
      7,
    ),
    tuple(
      75,
      7,
    ),
    tuple(
      76,
      6,
    ),
    tuple(
      77,
      6,
    ),
    tuple(
      78,
      5,
    ),
    tuple(
      85,
      5,
    ),
    tuple(
      86,
      4,
    ),
    tuple(
      91,
      4,
    ),
    tuple(
      92,
      3,
    ),
    tuple(
      95,
      3,
    ),
    tuple(
      96,
      4,
    ),
    tuple(
      97,
      3,
    ),
    tuple(
      98,
      2,
    ),
    tuple(
      105,
      2,
    ),
    tuple(
      106,
      1,
    ),
    tuple(
      107,
      1,
    ),
    tuple(
      108,
      2,
    ),
    tuple(
      109,
      3,
    ),
    tuple(
      110,
      2,
    ),
    tuple(
      111,
      3,
    ),
  ])
# ---
